Adding copyright and licence information, setting the last sample in test.html

--- a/src/test.html
+++ b/src/test.html
@@ -23,7 +23,7 @@
 	</script>
 </head>
 <body>
-	<p>Type the konami code, sfii code (if you know it), or the string "DUMMY"!</p>
+	<p>Type the konami code, sfii code (if you know it), the string "DUMMY", or the string "webdev20"!</p>
 	<div id="feedback"></div>
 </body>
 </html>
